Polygons' interior loops must be contained in the exterior shell, SERVER-10867.

Signed-off-by: Matt Kangas <matt.kangas@mongodb.com>